# msfs-dis-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  README.md  SimConnect.xml
docs/: Doxyfile  README.md  msfs-dis-architecture.md
docs/html/: BridgeRunner_8cpp.html  BridgeRunner_8cpp.js  BridgeRunner_8cpp_source.html  DISBridge_8cpp.html  DISBridge_8cpp.js  DISBridge_8cpp_source.html  Decode_8h.html  Decode_8h.js  Decode_8h_source.html  Encode_8h.html  Encode_8h.js  Encode_8h_source.html  FlightData_8h.html  FlightData_8h.js  FlightData_8h_source.html  InternalEvent_8h.html  InternalEvent_8h.js  InternalEvent_8h_source.html  README_8md.html  RestServer_8cpp.html  RestServer_8cpp_source.html  RestServer_8hpp.html  RestServer_8hpp.js  RestServer_8hpp_source.html  SessionManager_8cpp.html  SessionManager_8cpp_source.html  SessionManager_8hpp.html  SessionManager_8hpp_source.html  SimSession_8cpp.html  SimSession_8cpp.js  SimSession_8cpp_source.html  SimSession_8hpp.html  SimSession_8hpp.js  SimSession_8hpp_source.html  ThreadSafeQueue_8hpp.html  ThreadSafeQueue_8hpp_source.html  UDPMulticaster_8cpp.html  UDPMulticaster_8cpp.js  UDPMulticaster_8cpp_source.html  UDPMulticaster_8hpp.html  (+94 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_a.js  functions_b.js  functions_e.js  namespaces_0.js  pages_2.js  pages_4.js  pages_5.js  pages_8.js  pages_9.js  (+10 more)
docs/latex/: BridgeRunner_8cpp.tex  BridgeRunner_8cpp_source.tex  DISBridge_8cpp.tex  DISBridge_8cpp_source.tex  Decode_8h.tex  Decode_8h_source.tex  Encode_8h.tex  Encode_8h_source.tex  FlightData_8h.tex  FlightData_8h_source.tex  InternalEvent_8h.tex  InternalEvent_8h_source.tex  RestServer_8cpp.tex  RestServer_8cpp_source.tex  RestServer_8hpp.tex  RestServer_8hpp_source.tex  SessionManager_8cpp.tex  SessionManager_8cpp_source.tex  SessionManager_8hpp.tex  SessionManager_8hpp_source.tex  SimSession_8cpp.tex  SimSession_8cpp_source.tex  SimSession_8hpp.tex  SimSession_8hpp_source.tex  ThreadSafeQueue_8hpp.tex  ThreadSafeQueue_8hpp_source.tex  UDPMulticaster_8cpp.tex  UDPMulticaster_8cpp_source.tex  UDPMulticaster_8hpp.tex  UDPMulticaster_8hpp_source.tex  annotated.tex  classDecode.tex  classEncode.tex  classMappingConfig.tex  classRestServer.tex  classSessionManager.tex  classSimSession.tex  classThreadSafeQueue.tex  classUDPMulticaster.tex  decode_8cpp.tex  (+31 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_a.js  all_c.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_8.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_1.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  pages_1.js  (+14 more)
mappings/: default-mapping.csv
rcv_visuals/: main.py
src/: BridgeRunner.cpp
src/bridge-core/: DISBridge.cpp  Decode.h  Encode.h  FlightData.h  InternalEvent.h  MappingConfigManager.cpp  MappingConfigManager.h  PcapLogger.cpp  PcapLogger.h  README.md  decode.cpp  encode.cpp  mappingConfig.cpp  mappingConfig.h
src/bridge-manager/: SessionManager.cpp  SessionManager.hpp  SimSession.cpp  SimSession.hpp  readme.md
src/bridge-multicast/: ThreadSafeQueue.hpp  UDPMulticaster.cpp  UDPMulticaster.hpp
src/configs/: msfs-host-script.cpp  msfs-host.yaml
src/rest-api/: README.md  RestServer.cpp  RestServer.hpp  main.cpp
src/rest-api/controllers/: MappingConfigController.cpp  MappingConfigController.h  MetricsController.cpp  MetricsController.h
src/rest-api/middleware/: AuthMiddleware.h
src/rest-api/models/: HealthModel.cpp  HealthModel.h  MetricsModel.cpp  MetricsModel.h
src/rest-api/services/: MetricsCollector.cpp  MetricsCollector.h
src/rest-api/utils/: JsonResponse.cpp  JsonResponse.h
src/simconnect-adapter/: README.md
src/ui/: README.md
tests/pdu-replay/: TestBridge.cpp
tools/: visualize_dis.py
ui/workingButton/: layout.json  manifest.json
ui/workingButton/InGamePanels/: aerosoft-toolbar-pushback.spb
ui/workingButton/html_ui/InGamePanels/PanelToolbarPushback/: PanelToolbarPushback.css  PanelToolbarPushback.html  ToolbarHandler.css  ToolbarHandler.html  ToolbarHandler.js
ui/workingButton/html_ui/Pages/_ToolBar/: ToolBar.html  ToolBarAdjustments.js
ui/workingButton/html_ui/Pages/_ToolBar/Custom/: panel_pushback_planner.css  panel_pushback_planner.js  panel_toolbar_pushback.js
